@@ -1,3 +1,7 @@
+2019-03-26  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (revenue_breakdown): add function
+
 2019-02-05  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/functions.R (index_weights): add function
